operator/config/samples/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: heimdallr
  labels:
    instance: proxy-sample
spec:
  controller: heimdallr.f110.dev/ingress-controller
